# pywp

./: .gitignore  HANDOFF.md  README.md  all.txt  app.py  dbg_html.py  debug_opt.py  debug_summary.py  deep-research-report.md  docs.md  fix_planner.py  fix_welltracks3.py  get_summary_row.py  manual_well_planning.md  pyproject.toml  pytest.ini  replace_small.py  requirements-dev.txt  requirements.txt  run_debug.py  run_diag.py  run_patch.py  streamlit-docs.md  test_file.py  test_segments.py
.streamlit/: config.toml
.windsurf/: handoff_prompt.md
docs/: coordinate_integration.md  coordinate_systems.md
pages/: 01_trajectory_constructor.py  01_well_classification.py  01_классификация_скважин.py  02_single_well.py  02_welltrack_import.py  03_ptc.py  03_well_classification.py  04_crs_calculator.py
pywp/: __init__.py  actual_fund_analysis.py  analytical_precheck.py  anticollision.py  anticollision_optimization.py  anticollision_recommendations.py  anticollision_rerun.py  anticollision_rerun_models.py  anticollision_stage.py  classification.py  constants.py  coordinate_integration.py  coordinate_systems.py  eclipse_welltrack.py  geo_point.py  iscwsa_mwd.py  mcm.py  models.py  multi_horizontal.py  optimization_reference.py  pad_optimization.py  parallel.py  path_utils.py  pilot_wells.py  planner.py  planner_config.py  planner_geometry.py  planner_types.py  planner_validation.py  plot_axes.py  plotly_config.py  ptc_anticollision_params.py  ptc_anticollision_view.py  ptc_batch_results.py  ptc_batch_run.py  ptc_batch_summary_panel.py  ptc_core.py  ptc_edit_targets.py  (+36 more)
(+90 files in other folders)
