[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywp"
version = "0.1.0"
description = "Well trajectory planner and Streamlit visualizer"
readme = "deep-research-report.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "plotly>=5.18",
  "streamlit==1.54.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pywp*"]
