[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywp"
version = "0.1.0"
description = "Well trajectory planner and Streamlit visualizer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2,<3",
  "scipy>=1.10",
  "plotly>=5.18",
  "pyproj>=3.6,<4",
  "py7zr>=1.1,<2",
  "streamlit==1.54.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.6"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pywp*"]

[tool.setuptools.package-data]
pywp = [
  "three_viewer_assets/*.js",
  "three_viewer_assets/component/*.html",
  "three_viewer_assets/templates/*.html",
  "three_viewer_assets/vendor/*.js",
]
